feat: user manager
