# internal/apiserver/types/request/user.go
@@ -2,15 +2,15 @@ package request
 
 type RegisterRequest struct {
 	Email    string `json:"email"`
-	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required"`
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
 }
 
 type LoginRequest struct {
-	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required"`
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
 }
 
 type GetUserInfoRequest struct {
-	ID int64 `query:"userId" binding:"required"`
+	ID int64 `query:"userId" validate:"required"`
 }
